Fixed CSS to display properly on Firefox.

--- a/style/style.scss
+++ b/style/style.scss
@@ -28,7 +28,10 @@ body{
 }
 
 img{
-	image-rendering: pixelated;
+	/* https://caniuse.com/#search=image-render */
+  	-ms-interpolation-mode: nearest-neighbor; /* IE */
+  	image-rendering: -moz-crisp-edges; /* FF 6.0+ */
+  	image-rendering: pixelated; /* Chrome, Safari */
 }
 
 p,span,li{
@@ -198,7 +201,7 @@ header{
 	#mascot{
 		width: 19vw;
 		height: 19vw;
-		padding: 0 3vw;
+		padding: 0 20px;
 	}
 
 	h1{
